src/test/resources/annotator/ReservedTagValue.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 field1 = <error descr="Reserved tag value: 42">42</error>;

    reserved 42;
}